--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <div class="container">
 
-      <h1><a href="index.html">chudhary</a></h1>
+      <h1><a href="index.html">Abdul wahab</a></h1>
       <h2 style="color:#fff">I'm <span class="typing" style="color:#12D640"></span></h2>
       <nav class="nav-menu d-none d-lg-block">
         <ul>
