edit profile picture

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpg" class="img-fluid" height="100" width="450" alt="">
+          <img src="assets/img/Profile.jpg" class="img-fluid" height="100" width="450" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Skilled in Data Science, Machine Learning, Cybersecurity, and Linux. I apply advanced computer tools to simplify tasks, resulting in a 30% reduction in manual work and improving job interviews by 25%. My expertise lies in streamlining computer processes to be faster and more cost-effective. I prioritize continuous learning, contributing to an overall 15% enhancement in our work efficiency. Proficient in creating programs, decoding data patterns, and navigating diverse computer systems, I excel in solving intricate problems, ensuring work quality surpasses expectations. Moreover, I excel in fostering collaborative teamwork, effectively communicating complex technical ideas for optimal project outcomes. With a keen eye for innovation, I consistently seek out new ways to improve processes and achieve outstanding results. <br><br>          </p>
