--- a/index.html
+++ b/index.html
@@ -488,6 +488,20 @@
       </div>
 
 
+      <!-- Project 4: Security system-->
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <center><h4>Camera Security System</h4></center>
+        <div class="portfolio-wrap">
+          <img src="assets/img/project/Security system.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <a href="projects/security_system.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </section>
