--- a/projects/Real_Estate(ml).html
+++ b/projects/Real_Estate(ml).html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Personal Blog</title>
+  <title>ML-DL</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
