--- a/projects/security_system.html
+++ b/projects/security_system.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ML-DL WebApp</title>
+  <title>Security System using python</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,16 +43,16 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">ML-DL web app</h2>
+            <h2 style="color:#12d640">Security system in python</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Flask, Python, Heroku, SQlite, HTML, CSS</li>
-                <li><strong>Website URL</strong>: <a href="https://ml-dl-webapp.herokuapp.com/" target="_blank">Link</a></li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ML_DL_WebApp" target="_blank">Project Link</a></li>
+              <li><strong>Tech Stack</strong>: Opencv, time, datetime</li>
+              <li><strong>Language</strong>: Python </li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/wahabh7ck4r/Security-Camera-With-Python" target="_blank">Project Link</a></li>
             </ul>
 
             <p>
-              The web app created for showcasing machine learning and deep learning projects. The app consists of the flask as backend and bootstrap for the frontend part. The projects include text summarizer, image classifier and iris classifier.            
+              This project is a Python-based motion detection and recording system using OpenCV. It captures video from your webcam, detects faces and bodies, and records video clips when motion is detected.            
             </p>
           </div>
 
