--- a/projects/Probelm_solving.html
+++ b/projects/Probelm_solving.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Image Generator</title>
+    <title>Problem solver</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
