adding new project

--- a/index.html
+++ b/index.html
@@ -502,6 +502,20 @@
       </div>
 
 
+      <!-- Project 5: Finance tracker-->
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <center><h4>Finance Tracker</h4></center>
+        <div class="portfolio-wrap">
+          <img src="assets/img/project/finance_tracker.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <a href="projects/finance_tracker.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </div>
 </section>
