--- a/projects/finance_tracker.html
+++ b/projects/finance_tracker.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Resume Section Classifier</title>
+  <title>Personal Finance Tracker</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -43,18 +43,18 @@
 
           <div class="col-lg-12 portfolio-info">
             <br>
-            <h2 style="color:#12d640">Resume Section Classifier</h2>
+            <h2 style="color:#12d640">Personal Finance Tracker</h2>
 
             <ul>
-              <li><strong>Tech Stack</strong>: Python, scikit-learn, numpy, pandas</li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/ResumeSectionClassifier" target="_blank">Project Link</a></li>
+              <li><strong>Language</strong>: Python</li>
+              <li><strong>Tech Stack</strong>: pandas, matplotlib, datetime</li>
+              <li><strong>Github URL</strong>: <a href="https://github.com/wahabh7ck4r/finance-tracker" target="_blank">Project Link</a></li>
             </ul>
 
             <p>
-              Given the Resume of a person, detect the section words such as experience, skills, projects, etc. Implemented different machine learning algorithms to get the desired output.            
+              A command-line tool for managing, tracking, and visualizing income and expenses with CSV data storage and plotting capabilities            
             </p>
           </div>
-
         </div>
 
       </div>
