--- a/projects/finance_tracker.html
+++ b/projects/finance_tracker.html
@@ -52,7 +52,7 @@
             </ul>
 
             <p>
-              A command-line tool for managing, tracking, and visualizing income and expenses with CSV data storage and plotting capabilities            
+              A command line tool for managing, tracking, and visualizing income and expenses with CSV data storage and plotting capabilities            
             </p>
           </div>
         </div>
