--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 
       <!-- Project 5: Finance tracker-->
       <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-        <center><h4>Finance Tracker</h4></center>
+        <center><h4> Personal Finance Tracker</h4></center>
         <div class="portfolio-wrap">
           <img src="assets/img/project/finance_tracker.jpg" class="img-fluid" alt="">
           <div class="portfolio-info">
@@ -516,6 +516,7 @@
       </div>
 
 
+      
     </div>
   </div>
 </section>
