--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1tjy7KHsvKJHoLpjij0ADfz_IjuTtLEUH/view?usp=sharing" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1tuMUbrXyQXEho46Pbpi83xL4JUMpt5Vu/view?usp=drive_link" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -675,8 +675,8 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1tjy7KHsvKJHoLpjij0ADfz_IjuTtLEUH/view?usp=sharing" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1tjy7KHsvKJHoLpjij0ADfz_IjuTtLEUH/view?usp=sharing" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/1tuMUbrXyQXEho46Pbpi83xL4JUMpt5Vu/view?usp=drive_link" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1tuMUbrXyQXEho46Pbpi83xL4JUMpt5Vu/view?usp=drive_link" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
 
