adding new project

--- a/index.html
+++ b/index.html
@@ -515,6 +515,19 @@
         </div>
       </div>
 
+      <!-- Project 6: Emial/SMS spam Detection  -->
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <center><h4> Email/SMS spam Classifire</h4></center>
+        <div class="portfolio-wrap">
+          <img src="assets/img/project/email_spam.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <a href="projects/Email_spam.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       
     </div>
