--- a/projects/Email_spam.html
+++ b/projects/Email_spam.html
@@ -45,16 +45,16 @@
               <br>
               <h2 style="color:#12d640">Music Streaming Website</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, Bootstrap, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://galvanic-music.herokuapp.com/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/rajaprerak/MusicPlayer" target="_blank">Project Link</a></li>
+
+                <li><strong>Proraming Language</strong>: python </li>
+                <li><strong>Tech Stack</strong>: numpy, pandas, matplotlib, seaborn , sklearn, streamlit , nltk, string</li>
+                <li><strong>Website URL</strong>: <a href="https://sms-spam-detection-nb3fdvxmxm2cnorpfr5mup.streamlit.app" target="_blank">Link</a></li>
+                <li><strong>Github URL</strong>: <a href="https://github.com/wahabh7ck4r/SMS-SPAM-DETECTION" target="_blank">Project Link</a></li>
               </ul>
   
+             
               <p>
-                Django based music streaming website.             
-              </p>
-              <p>
-                User can register/login to the web app, play song, view detailed information of song, search song based on filters such as language and singers, create playlist, add/remove songs to/from playlist, add/remove songs to/from favourites, explore recently played songs.              
+                A Streamlit web app that classifies messages as spam or not using a machine learning model trained on real SMS data. The model uses TfidfVectorizer for feature extraction and a trained Multinomial Naive Bayes classifier for accurate prediction.            
               </p>
             </div>
   
