update with latest changes

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
           <li class="active"><a href="#header"> <span>Home</span></a></li>
           <li><a href="#about"><span>About</span></a></li>
 <!--          <li><a href="#education"> <span>Education</span></a></li>-->
-          <!-- <li><a href="#experience"> <span>Experience</span></a></li> -->
+          <li><a href="#experience"> <span>Experience</span></a></li>
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1tuMUbrXyQXEho46Pbpi83xL4JUMpt5Vu/view?usp=drive_link" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1WQDLISfXTCaIHY6wzd760irCBNMpX2m_/view" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -395,35 +395,28 @@
       </div>
       <div class="row">
           <div class="col-lg-12" data-aos="fade-up">
-              <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://ejadlabs.com" style="color:#12d640">Ejad Labs</a><br> </h4>
-                <h5 style="text-align:left;">November 2023 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>Software Engineering Internee </em></p>
-                <ul style="text-align:left;">
-                  <li>Engineered a fully functional web application to optimize operational workflows and enhance user interaction.</li>
-                  <li>Devised a resume scoring system based on intricate criteria, resulting in a 30% reduction in manual screening efforts.</li>
-                  <li>Constructed an automated AI interviewer using advanced machine learning techniques (GAN, computer vision), accelerating decision-making processes by 40%.</li>
-                  <li>Innovated a real-time GAN-based visual interviewer, improving interview efficiency by 25%.</li>
-                  <li>Integrated solutions into a comprehensive HR project, incorporating NLP, deep learning, web development, GAN, and computer vision.</li>
-                  <li>Achieved substantial cost savings and a remarkable 70% reduction in candidate selection and onboarding timelines.</li>
-                                </ul>
+              <div  style="text-align:left" class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                <h4 style="text-align:left;"><a href="https://ejadlabs.com" style="color:#12d640">MGC Developments</a><br> </h4>
+                <h5 style="text-align:left;">Aug 2025 - Present</h5>
+                <p style="text-align:left;color:#fff"><em>AI Engineer </em></p>
+                <ul >
+                  <li>Developed an <b>AI-powered WhatsApp agent</b> to automate customer outreach, engage in contextual auto-chatting, and schedule meetings, achieving <b>95%+ intent recognition accuracy</b> and streamlining lead conversion.</li>
+                  <li>Collaborated on an <b>AI-driven recovery model</b> for automated customer follow-ups, optimizing recovery processes by improving model accuracy from <b>85% to 93%</b> through advanced feature engineering and hyperparameter tuning.</li>
+                  <li>Integrated <b>NLP models</b> with high accuracy to enable robust conversation recovery, ensuring seamless interactions by detecting and correcting dialogue errors in <b>real-time</b> customer communications.</li>
+                  <li>Communicated complex <b>AI model performance metrics</b> and automation benefits to <b>non-technical stakeholders</b>, driving adoption of AI solutions across the organization.</li>
+
+                </ul>
               </div>
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-                <h4 style="text-align:left;"><a href="https://mod.gov.pk" style="color:#12d640">Government of Pakistan</a><br> </h4>
-                <h5 style="text-align:left;">July 2023 - August 2023</h5>
-                <p style="text-align:left;color:#fff"><em>Python Developer & Red Teamer</em></p>
+                <h4 style="text-align:left;"><a href="https://mod.gov.pk" style="color:#12d640">IT & Programming Center</a><br> </h4>
+                <h5 style="text-align:left;">Aug 2024 - April 2025</h5>
+                <p style="text-align:left;color:#fff"><em>Python Instructor</em></p>
                 <ul style="text-align:left;">
-                  <li>Decreased web application penetration testing time from 20 to 10 hours, resulting in direct labor cost savings and heightened security effectiveness.</li>
-                  <li>Reduced data extraction and conversion time by 70%, delivering concrete time savings for machine learning projects and mitigating resource-intensive manual tasks.</li>
-                  <li>Realized a 30% cut in pentesting expenditures by adopting Python automation for routine testing, providing a direct impact on the budget allocation for security initiatives.</li>
-                  <li>Improved team efficiency by 20% through seamless collaboration, ensuring the smooth integration of automated solutions across diverse functional teams without disruptions.</li>
-                  <li>Instituted new tools and methodologies, resulting in a 15% boost in overall process efficiency. This measurable outcome underscores a commitment to technological relevance and operational efficiency.
-
-
-
-
-                  </li>
-                
+                    <li>Delivered comprehensive Python training, covering fundamentals through advanced programming and object-oriented concepts.</li>
+                    <li>Developed and executed structured lesson plans with practical coding exercises and real-world applications.</li>
+                    <li>Provided in-depth instruction on core libraries including <b>NumPy, Pandas, and Matplotlib</b> for data handling and visualization.</li>
+                    <li>Offered guided overviews of advanced frameworks such as <b>Flask, Django, and TensorFlow</b> to broaden student exposure.</li>
+                    <li>Mentored and supported learners in applying Python and its ecosystem effectively in academic and project-based work.</li>                
                 </ul>
               </div>
               
@@ -688,8 +681,8 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1tuMUbrXyQXEho46Pbpi83xL4JUMpt5Vu/view?usp=drive_link" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1tuMUbrXyQXEho46Pbpi83xL4JUMpt5Vu/view?usp=drive_link" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/1WQDLISfXTCaIHY6wzd760irCBNMpX2m_/view" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1WQDLISfXTCaIHY6wzd760irCBNMpX2m_/view" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
 
@@ -719,9 +712,8 @@
           <div class="info-box">
             <i class="bx bx-map"></i>
             <h3>My Address</h3>
-            <p>Jhanda Chachi</p>
-            <p>Rawalpindi</p>
-            <p>Punjab, Pakistan</p>
+            <p>Islamabad</p>
+            <p>Pakistan</p>
           </div>
         </div>
 
