--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 <!--          <li><a href="#projects"> <span>Projects</span></a></li>-->
           <li><a href="#portfolio"> <span>Projects</span></a></li>
           <li><a href="#skills"> <span>Skills</span></a></li>
-          <li><a href="https://drive.google.com/file/d/1WQDLISfXTCaIHY6wzd760irCBNMpX2m_/view" target="_blank"> <span>Resume</span></a></li>
+          <li><a href="https://drive.google.com/file/d/1WSXl97YfOBcLKFt5S5f2ZzQOl4H5xRf2/view?usp=drivesdk" target="_blank"> <span>Resume</span></a></li>
           <!-- <li><a href="#links"> <span>Resume & Links</span></a></li> -->
           <li><a href="#contacts"> <span>Contact</span></a></li>
 
@@ -398,7 +398,7 @@
               <div  style="text-align:left" class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://ejadlabs.com" style="color:#12d640">MGC Developments</a><br> </h4>
                 <h5 style="text-align:left;">Aug 2025 - Present</h5>
-                <p style="text-align:left;color:#fff"><em>AI Engineer </em></p>
+                <p style="text-align:left;color:#fff"><em> <b> AI Engineer</b> </em></p>
                 <ul >
                   <li>Developed an <b>AI-powered WhatsApp agent</b> to automate customer outreach, engage in contextual auto-chatting, and schedule meetings, achieving <b>95%+ intent recognition accuracy</b> and streamlining lead conversion.</li>
                   <li>Collaborated on an <b>AI-driven recovery model</b> for automated customer follow-ups, optimizing recovery processes by improving model accuracy from <b>85% to 93%</b> through advanced feature engineering and hyperparameter tuning.</li>
@@ -410,7 +410,7 @@
               <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                 <h4 style="text-align:left;"><a href="https://mod.gov.pk" style="color:#12d640">IT & Programming Center</a><br> </h4>
                 <h5 style="text-align:left;">Aug 2024 - April 2025</h5>
-                <p style="text-align:left;color:#fff"><em>Python Instructor</em></p>
+                <p style="text-align:left;color:#fff"><em> <b>Python Instructor</b></em></p>
                 <ul style="text-align:left;">
                     <li>Delivered comprehensive Python training, covering fundamentals through advanced programming and object-oriented concepts.</li>
                     <li>Developed and executed structured lesson plans with practical coding exercises and real-world applications.</li>
@@ -681,8 +681,8 @@
       </div>
       <div class="row">
         <div class="col-md-3 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
-          <a href="https://drive.google.com/file/d/1WQDLISfXTCaIHY6wzd760irCBNMpX2m_/view" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
-          <h4 class="title"><a href="https://drive.google.com/file/d/1WQDLISfXTCaIHY6wzd760irCBNMpX2m_/view" target="_blank">Resume</a></h4>
+          <a href="https://drive.google.com/file/d/1WSXl97YfOBcLKFt5S5f2ZzQOl4H5xRf2/view?usp=drivesdk" target="_blank"><div class="icon"><i class="icofont-page"></i></div></a>
+          <h4 class="title"><a href="https://drive.google.com/file/d/1WSXl97YfOBcLKFt5S5f2ZzQOl4H5xRf2/view?usp=drivesdk" target="_blank">Resume</a></h4>
           <p class="description" style="color:#fff;">The link contains downloadable resume</p>
         </div>
 
